fix: hide scrollbar while loading

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,13 @@ body {
     scrollbar-color: var(--accent-color) var(--bg-color);
 }
 
+body.no-scrollbar {
+    overflow: hidden !important;
+}
+body.no-scrollbar::-webkit-scrollbar {
+    display: none !important;
+}
+
 /* Chrome, Edge, Safari */
 ::-webkit-scrollbar {
     width: 10px;
